feat: expose new optimization settings

--- a/app/templates/global_config.html
+++ b/app/templates/global_config.html
@@ -437,8 +437,12 @@
                                 <input type="number" id="insurance-amount" class="form-input" value="10999" min="0" max="20000" step="100">
                     </div>
                     <div class="form-group">
-                                <label class="form-label" for="gps-fee">GPS Fee</label>
-                                <input type="number" id="gps-fee" class="form-input" value="350" min="0" max="1000" step="50">
+                                <label class="form-label" for="gps-installation-fee">GPS Install Fee</label>
+                                <input type="number" id="gps-installation-fee" class="form-input" value="750" min="0" max="2000" step="50">
+                    </div>
+                    <div class="form-group">
+                                <label class="form-label" for="gps-monthly-fee">GPS Monthly Fee</label>
+                                <input type="number" id="gps-monthly-fee" class="form-input" value="350" min="0" max="1000" step="50">
                     </div>
                 </div>
             </div>
@@ -452,6 +456,14 @@
                                 <label class="form-label" for="min-npv">Min NPV Threshold</label>
                                 <input type="number" id="min-npv" class="form-input" value="5000" min="0" max="50000" step="1000">
                                 <small class="form-help">Minimum viable NPV (MXN)</small>
+                            </div>
+                    <div class="form-group">
+                                <label class="form-label" for="max-combos">Max Combinations</label>
+                                <input type="number" id="max-combos" class="form-input" value="1000" min="1" step="1">
+                            </div>
+                    <div class="form-group">
+                                <label class="form-label" for="early-stop">Early Stop Offers</label>
+                                <input type="number" id="early-stop" class="form-input" value="100" min="1" step="1">
                             </div>
                     </div>
                     </div>
