--- a/app/templates/customer_view.html
+++ b/app/templates/customer_view.html
@@ -45,7 +45,7 @@
                 <option value="{{ customer.customer_id }}" selected>Customer {{ customer.customer_id }}</option>
             </select>
         </div>
-        <select id="mode-select" style="margin-right:10px;">
+        <select id="mode-select" style="margin-right:10px;" aria-label="Engine mode">
             <option value="current">Current Mode</option>
             <option value="default">Default</option>
             <option value="custom">Custom</option>
