--- a/app/templates/global_config.html
+++ b/app/templates/global_config.html
@@ -146,7 +146,7 @@
     </div>
 
     <!-- Simple Loading Modal for blocking actions -->
-    <div id="config-loading-modal" class="loading-modal" style="display: none;">
+    <div id="config-loading-modal" class="loading-modal" role="dialog" aria-modal="true" aria-labelledby="loading-modal-title" aria-describedby="loading-modal-message" style="display: none;">
         <div class="loading-modal-content">
             <div class="spinner"></div>
             <h3 id="loading-modal-title">Processing...</h3>
