--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,15 @@
                     </svg>
                     <span>Settings</span>
                 </a>
+                
+                <a href="/audit" 
+                   class="nav-link {% if active_page=='audit' %}active{% endif %}"
+                   {% if active_page=='audit' %}aria-current="page"{% endif %}>
+                    <svg class="nav-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                    </svg>
+                    <span>Audit</span>
+                </a>
             </nav>
         </aside>
         
